--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -9,8 +9,10 @@ html
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
 
     = javascript_importmap_tags
+    = hotwire_livereload_tags if Rails.env.development?
 
   body
+    = ribbonit unless Rails.env.production?
     = render 'admin/sidebar'
 
     main.p-5.h-screen.sm:ml-64.md:ml-72
