--- a/app/views/layouts/session.html.slim
+++ b/app/views/layouts/session.html.slim
@@ -9,8 +9,11 @@ html
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
 
     = javascript_importmap_tags
+    = hotwire_livereload_tags if Rails.env.development?
 
-  body
+  body.bg-primary-color
+    = ribbonit unless Rails.env.production?
+
     main.flex.flex-col.items-center.justify-center.p-5.h-screen
       #flash= render 'flash'
 
