--- a/app/views/me/profiles/edit.html.slim
+++ b/app/views/me/profiles/edit.html.slim
@@ -1,8 +1,22 @@
-h1.text-3xl.font-medium.my-5 Mon profil
+.bg-white.rounded-lg.p-10.w-full.md:w-2/3.lg:w-1/2.xl:w-1/3.border.rounded-lg.mx-auto
+  h2.text-center.text-primary-color.text-xl.font-semibold.mb-5
+    | Mon profil
 
-= simple_form_for current_user, url: [:me, :profile] do |f|
-  = f.input :email
-  = f.input :first_name
-  = f.input :last_name
+  = simple_form_for current_user, url: [:me, :profile] do |f|
+    .flex.flex-col.lg:flex-row.items-center.gap-3.mb-5
+      = f.input :first_name,
+                label_html: { class: 'form-label' },
+                input_html: { class: 'form-input' },
+                wrapper_html: { class: 'w-full' }
 
-  = f.button :submit
+      = f.input :last_name,
+                label_html: { class: 'form-label' },
+                input_html: { class: 'form-input' },
+                wrapper_html: { class: 'w-full' }
+
+    = f.input :email,
+              label_html: { class: 'form-label' },
+              input_html: { class: 'form-input' },
+              wrapper_html: { class: 'mb-5' }
+
+    = f.button :submit, 'Modifier mon profil', class: 'add-link cursor-pointer'
