Update template to be Rails 8 friendly
- Adapt template to be Rails 8 compliant
- Replace deprecated `annotate` by `annotaterb`
- Use `letter_opener_web` to have a dashboard of sent email
- Add `mission_control-job` to display enqueued jobs
- Remove custom database configuration to use default one
- Remove Sorcery monkey patch
- Adapt stylesheets
- Fix Rubocop offenses

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,16 +1,21 @@
-@import './components/form';
-@import './components/panels';
-@import './components/buttons';
-@import './components/flash';
-@import './plugins/pagy';
+@import "./components/form";
+@import "./components/panels";
+@import "./components/buttons";
+@import "./components/flash";
+@import "./plugins/pagy";
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-  :root {
-    --primary-color: #385dc7;
-    --secondary-color: #000;
-  }
+    :root {
+        --primary-color: #385dc7;
+        --secondary-color: #000;
+    }
+}
+
+.turbo-progress-bar {
+    height: 5px;
+    background-color: var(--color-secondary);
 }
