--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -5,8 +5,9 @@ html
     = csrf_meta_tags
     = csp_meta_tag
 
-    = stylesheet_link_tag 'tailwind',  'data-turbo-track': 'reload'
+    = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
+    = stylesheet_link_tag 'ribbon' if Rails.env.development?
 
     = javascript_importmap_tags
     = hotwire_livereload_tags if Rails.env.development?
