--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,14 @@ html
     = csrf_meta_tags
     = csp_meta_tag
 
+    = yield :head
+
+    / Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!)
+    = tag.link rel: "manifest", href: pwa_manifest_path(format: :json)
+
     = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
-    = stylesheet_link_tag "application", "data-turbo-track": "reload"
+    = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
+    = stylesheet_link_tag 'ribbon' if Rails.env.development?
 
     = javascript_importmap_tags
     = hotwire_livereload_tags if Rails.env.development?
