--- a/app/views/admin/users/_user.html.slim
+++ b/app/views/admin/users/_user.html.slim
@@ -9,12 +9,14 @@ tr.bg-white.border-b.dark:bg-gray-800.dark:border-gray-700.hover:bg-gray-50.dark
     = User.human_enum_name(:role, user.role)
 
   td.flex.items-center.px-6.py-4
-    = link_to 'Modifier',
-              edit_admin_user_path(user),
-              class: 'edit-link'
+    - if allowed_to?(:update?, user)
+      = link_to 'Modifier',
+                edit_admin_user_path(user),
+                class: 'edit-link'
 
-    = button_to 'Supprimer',
-                admin_user_path(user),
-                method: :delete,
-                data: { turbo_confirm: 'Voulez-vous supprimer cet utilisateur ?' },
-                class: 'destroy-button ms-3'
+    - if allowed_to?(:destroy?, user)
+      = button_to 'Supprimer',
+                  admin_user_path(user),
+                  method: :delete,
+                  data: { turbo_confirm: 'Voulez-vous supprimer cet utilisateur ?' },
+                  class: 'destroy-button ms-3'
