--- a/app/views/admin/users/_form.html.slim
+++ b/app/views/admin/users/_form.html.slim
@@ -10,7 +10,7 @@
               input_html: { class: 'form-input' },
               wrapper_html: { class: 'w-full' }
 
-  = f.input :email,
+  = f.input :email_address,
             label_html: { class: 'form-label' },
             input_html: { class: 'form-input' },
             wrapper_html: { class: 'mb-5' }
