--- a/app/models/user.rb.tt
+++ b/app/models/user.rb.tt
@@ -1,32 +1,26 @@
 class User < ApplicationRecord
-  EMAIL_REGEX = /\A[^@\s]+@([^@.\s]+\.)+[^@.\s]+\z/
-
   enum :role, { standard: 0, admin: 1, super_admin: 2 },
        default: :standard,
        validate: true
+  <%- if @authentication -%>
+
+  has_secure_password
+  normalizes :email_address, with: ->(e) { e.strip.downcase }
+
+  has_many :sessions, dependent: :destroy
+
+  <%- end -%>
   <%- unless options.skip_active_storage? -%>
 
   has_one_attached :avatar
   <%- end %>
 
-  authenticates_with_sorcery!
-
-  validates :email, presence: true,
-                    format: { with: EMAIL_REGEX },
-                    uniqueness: { case_sensitive: false }
-  validates :password, length: { minimum: 8 },
-                       presence: true,
-                       confirmation: true,
-                       if: :validate_password?
-  validates :password_confirmation, presence: true, if: :validate_password?
+  validates :email_address,
+            presence: true,
+            format: { with: URI::MailTo::EMAIL_REGEXP },
+            uniqueness: { case_sensitive: false }
 
   def full_name
     "#{first_name} #{last_name}"
-  end
-
-  private
-
-  def validate_password?
-    new_record? || changes[:crypted_password] || reset_password_token_changed?
   end
 end
