--- a/app/views/application/_session_box.html.slim.tt
+++ b/app/views/application/_session_box.html.slim.tt
@@ -1,8 +1,7 @@
-.bg-white.rounded-lg.p-10.w-full.md:w-2/3.lg:w-1/2.xl:w-1/3
-  = link_to root_path, class: 'flex items-center justify-center mb-8 text-primary-color' do
-    /= render 'logo'
-    | <%= camelized %>
+= link_to root_path, class: 'mb-8' do
+  h1.text-3xl.text-white <%= camelized %>
 
+.bg-white.rounded-lg.p-10.w-full.md:w-2/3.lg:w-1/2.xl:w-1/3.mx-auto
   h2.text-center.text-primary-color.text-xl.font-semibold.mb-5
     = title
 
