--- a/app/views/me/profiles/edit.html.slim
+++ b/app/views/me/profiles/edit.html.slim
@@ -14,9 +14,10 @@
                 input_html: { class: 'form-input' },
                 wrapper_html: { class: 'w-full' }
 
-    = f.input :email,
+    = f.input :email_address,
               label_html: { class: 'form-label' },
               input_html: { class: 'form-input' },
               wrapper_html: { class: 'mb-5' }
 
-    = f.button :submit, 'Modifier mon profil', class: 'add-link cursor-pointer'
+    .flex.justify-end
+      = f.button :submit, 'Modifier mon profil'
