--- a/db/seeds.rb.tt
+++ b/db/seeds.rb.tt
@@ -1,10 +1,11 @@
+<%- if @authentication -%>
 require 'open-uri'
 
 puts 'Seeding users...'
 
 %i[standard admin super_admin].each do |role|
   user = User.create!(
-    email: "#{role}@demo.test",
+    email_address: "#{role}@demo.test",
     first_name: FFaker::Name.first_name,
     last_name: FFaker::Name.last_name,
     password: 'password',
@@ -21,3 +22,4 @@ puts 'Seeding users...'
   )
   <%- end -%>
 end
+<%- end -%>
