--- a/app/views/layouts/application.html.slim.tt
+++ b/app/views/layouts/application.html.slim.tt
@@ -5,7 +5,15 @@ html
     = csrf_meta_tags
     = csp_meta_tag
 
+    = yield :head
+
+    / Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!)
+    = tag.link rel: "manifest", href: pwa_manifest_path(format: :json)
+    <%- if options[:css] == 'tailwind' -%>
+
     = stylesheet_link_tag 'tailwind', 'inter-font', 'data-turbo-track': 'reload'
+    <%- end -%>
+
     = stylesheet_link_tag 'application', 'data-turbo-track': 'reload'
     = stylesheet_link_tag 'ribbon' if Rails.env.development?
 
@@ -14,9 +22,9 @@ html
 
   body
     = ribbonit unless Rails.env.production?
-    = render 'admin/sidebar'
+    = render 'header'
 
-    main.p-5.h-screen.sm:ml-64.md:ml-72
+    main.md:container.mx-auto.p-5.lg:pb-16
       #flash= render 'flash'
 
       = yield
