Conditionaly check for `action_mailer`
If `--skip-action-mailer` flag is provided to Rails generator,
do not generate `UserMailer` and skip `letter_opener` gem and config.

--- a/config/routes.rb.tt
+++ b/config/routes.rb.tt
@@ -1,6 +1,8 @@
 Rails.application.routes.draw do
   mount MissionControl::Jobs::Engine, at: '/jobs'
+  <%- unless options.skip_action_mailer? -%>
   mount LetterOpenerWeb::Engine, at: '/letter_opener' if Rails.env.development?
+  <%- end -%>
 
   root to: 'homes#show'
 
