--- a/app/views/admin/users/edit.html.slim
+++ b/app/views/admin/users/edit.html.slim
@@ -1,8 +1,8 @@
 header
-  h2 Modifier un utilisateur
+  h2= t('.title')
 
   - if allowed_to?(:index?, User)
-    = link_to '↞ Retour', admin_users_path
+    = link_to t('back'), admin_users_path
 
 section
   = render 'form', user: @user
