--- a/app/views/application/_header.html.slim.tt
+++ b/app/views/application/_header.html.slim.tt
@@ -15,19 +15,17 @@ nav role="navigation"
           summary
             - if current_user.avatar.attached?
               => image_tag polymorphic_path(current_user.avatar), style: 'width: 30px; height: 30px; border-radius: 50%; border: 2px solid var(--pico-primary);'
-              | Mon compte
-            - else
-              | Mon compte
+            = t('.my_account')
 
           ul dir="rtl"
             li
-              = link_to 'Mon profil', edit_me_profile_path
+              = link_to t('.my_profile'), edit_me_profile_path
 
             - if allowed_to?(:show?, with: Admin::DashboardPolicy)
               li
-                = link_to 'Espace administrateur', admin_dashboard_path
+                = link_to t('.admin_side'), admin_dashboard_path
 
             li
-              = link_to 'Déconnexion',
+              = link_to t('.sign_out'),
                         session_path,
                         data: { turbo_method: :delete }
