--- a/app/controllers/application_controller.rb.tt
+++ b/app/controllers/application_controller.rb.tt
@@ -1,6 +1,10 @@
 class ApplicationController < ActionController::Base
   include Pagy::Backend
+  <%- if @locales.count > 1 -%>
 
+  around_action :switch_locale
+
+  <%- end -%>
   # Only allow modern browsers supporting webp images, web push, badges, import maps, CSS nesting, and CSS :has.
   # allow_browser versions: :modern
   <%- if @authentication -%>
@@ -23,6 +27,13 @@ class ApplicationController < ActionController::Base
     message = t "#{policy_name}.#{e.rule}", scope: 'action_policy', default: :default
 
     redirect_back_or_to root_path, alert: message
+  end
+  <%- end -%>
+  <%- if @locales.count > 1 -%>
+
+  def switch_locale(&action)
+    locale = params[:locale] || I18n.default_locale
+    I18n.with_locale(locale, &action)
   end
   <%- end -%>
 end
