--- a/app/views/admin/users/_user.html.slim
+++ b/app/views/admin/users/_user.html.slim
@@ -7,12 +7,12 @@ tr
 
   td
     - if allowed_to?(:update?, user)
-      = link_to 'Modifier', edit_admin_user_path(user)
+      = link_to t('edit'), edit_admin_user_path(user)
 
     - if allowed_to?(:destroy?, user)
       br
       br
-      = button_to 'Supprimer',
+      = button_to t('destroy'),
                   admin_user_path(user),
                   method: :delete,
                   data: { turbo_confirm: 'Voulez-vous supprimer cet utilisateur ?' }
