--- a/config/locales/simple_form.en.yml.tt
+++ b/config/locales/simple_form.en.yml.tt
@@ -7,3 +7,9 @@ en:
       mark: '*'
     error_notification:
       default_message: "Please review the problems below:"
+    <%- if @authentication -%>
+
+    placeholders:
+      defaults:
+        email_address: Email
+    <%- end -%>
