--- a/config/routes.rb.tt
+++ b/config/routes.rb.tt
@@ -4,8 +4,6 @@ Rails.application.routes.draw do
   mount LetterOpenerWeb::Engine, at: '/letter_opener' if Rails.env.development?
   <%- end -%>
 
-  root to: 'homes#show'
-
   # Reveal health status on /up that returns 200 if the app boots with no exceptions, otherwise 500.
   # Can be used by load balancers and uptime monitors to verify that the app is live.
   get 'up' => 'rails/health#show', as: :rails_health_check
@@ -13,10 +11,27 @@ Rails.application.routes.draw do
   # Render dynamic PWA files from app/views/pwa/* (remember to link manifest in application.html.erb)
   get 'manifest' => 'rails/pwa#manifest', as: :pwa_manifest
   get 'service-worker' => 'rails/pwa#service_worker', as: :pwa_service_worker
+
+  <%- if @locales.count > 1 -%>
+  localized do
+    root to: 'homes#show'
+    <%- if @authentication -%>
+
+    resource :session, only: %i[new create show destroy]
+    resource :registration, only: %i[new create]
+    <%- unless options.skip_action_mailer? -%>
+    resources :passwords, param: :token, only: %i[new create edit update]
+    <%- end -%>
+
+    draw :me
+    draw :admin
+    <%- end -%>
+  end
+  <%- else -%>
+  root to: 'homes#show'
   <%- if @authentication -%>
 
-  get '/sessions', to: redirect('/sessions/new')
-  resource :session, only: %i[new create destroy]
+  resource :session, only: %i[new create show destroy]
   resource :registration, only: %i[new create]
   <%- unless options.skip_action_mailer? -%>
   resources :passwords, param: :token, only: %i[new create edit update]
@@ -24,5 +39,6 @@ Rails.application.routes.draw do
 
   draw :me
   draw :admin
+  <%- end -%>
   <%- end -%>
 end
